<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.xiaomisum</groupId>
    <artifactId>robotest-server</artifactId>
    <version>0.0.1</version>
    <packaging>jar</packaging>

    <name>${project.artifactId}</name>
    <description>Robotest 测试平台 后端服务</description>

    <properties>
        <migoo.framework.version>1.3.17</migoo.framework.version>


        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>xyz.migoo.springboot</groupId>
                <artifactId>migoo-framework-dependencies</artifactId>
                <version>${migoo.framework.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>xyz.migoo.springboot</groupId>
            <artifactId>migoo-spring-boot-starter-common</artifactId>
        </dependency>

        <dependency>
            <groupId>xyz.migoo.springboot</groupId>
            <artifactId>migoo-spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>xyz.migoo.springboot</groupId>
            <artifactId>migoo-spring-boot-starter-security</artifactId>
        </dependency>

        <dependency>
            <groupId>xyz.migoo.springboot</groupId>
            <artifactId>migoo-spring-boot-starter-mybatis</artifactId>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>


        <dependency>
            <groupId>xyz.migoo.springboot</groupId>
            <artifactId>migoo-spring-boot-starter-redis</artifactId>
        </dependency>

        <dependency>
            <groupId>xyz.migoo.springboot</groupId>
            <artifactId>migoo-spring-boot-starter-websocket</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
        </dependency>

        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>


    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>io.github.xiaomisum.robotest.RobotestServer</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <repository>
            <id>jcenter</id>
            <url>https://jcenter.bintray.com/</url>
        </repository>
    </repositories>
</project>
